--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
         "type": "git",
         "url": "https://github.com/collboard/module-sample-basic"
     },
-    "homepage": "https://collboard.com/#!!Link to Collboard store",
     "private": false,
     "main": "./src/_index.ts",
     "scripts": {
@@ -18,6 +17,6 @@
         "publish": "colldev publish"
     },
     "dependencies": {
-        "@collboard/modules-sdk": "^11.1.0-21"
+        "@collboard/modules-sdk": " 11.2.2-1"
     }
 }
