--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "noEmit": false,
         "downlevelIteration": true,
         "esModuleInterop": true,
+        "resolveJsonModule": true,
         "strict": true
     },
     "include": ["src"],
