--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,9 +1,9 @@
 ports:
-  - port: 3000
-    onOpen: ignore
+    - port: 3000
+      #onOpen: ignore
 tasks:
-  - init: npm install
-  - command: npm start
+    - init: npm install
+    - command: npm start
 vscode:
-  extensions:
-    - esbenp.prettier-vscode
+    extensions:
+        - esbenp.prettier-vscode
