New type of configuration and asset import

--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-    "version": "10.4.1-2",
-    "description": "Simple sample module for Collboard.com created via @collboard/modules-sdk",
+    "name": "@collboard/module-sample-objects",
+    "version": "0.1.0",
+    "description": "Sample of tool+arts module for Collboard.com created via @collboard/modules-sdk",
     "license": "SEE LICENSE IN LICENSE",
     "contributors": [
-        "Pavol Hejný <pavol@collboard.com> (https://pavolhejny.com)",
-        "Jonáš Rosecký <jonas@collboard.com>"
+        "Pavol Hejný <pavol.hejny@collboard.com> (https://collboard.com/-/about/team)",
+        "Jonáš Rosecký <jonas.rosecky@collboard.com> (https://collboard.com/-/about/team)"
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/collboard/module-sample-basic"
+        "url": "https://github.com/collboard/module-sample-objects"
     },
     "private": false,
-    "main": "./src/_index.ts",
     "scripts": {
-        "start": "colldev ",
-        "publish": "colldev publish"
+        "start": "colldev develop",
+        "publish": "colldev publish",
+        "lint": "tslint -p tsconfig.json",
+        "preversion": "npm run lint && npm test",
+        "postversion": "git push && git push --tags"
     },
-    "dependencies": {
-        "@collboard/modules-sdk": "^12.0.0-1"
+    "devDependencies": {
+        "@collboard/modules-sdk": "^18.4.5",
+        "tslint": "^6.1.3"
     }
 }
