--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "postversion": "git push && git push --tags"
     },
     "devDependencies": {
-        "@collboard/modules-sdk": "^18.4.5",
+        "@collboard/modules-sdk": "^18.5.0",
         "tslint": "^6.1.3"
-    }
+    },
+    "dependencies": {}
 }
