--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     },
     "devDependencies": {
         "@collboard/modules-sdk": "^18.5.0",
-        "tslint": "^6.1.3"
-    },
-    "dependencies": {}
+        "@types/react": "^17.0.38",
+        "destroyable": "^0.9.0",
+        "tslint": "^6.1.3",
+        "xyzt": "^4.7.0"
+    }
 }
