--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "postversion": "git push && git push --tags"
     },
     "devDependencies": {
+        "@collboard/modules-sdk": "18.4.0",
         "@types/react": "^17.0.38",
         "destroyable": "^0.9.0",
         "tslint": "^6.1.3",
