--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
         "postversion": "git push && git push --tags"
     },
     "devDependencies": {
-        "@collboard/modules-sdk": "18.10.0",
-        "@types/react": "^17.0.38",
-        "destroyable": "^0.9.0",
-        "tslint": "^6.1.3",
+        "@collboard/modules-sdk": "18.11.1",
+        "tslint": "^6.1.3"
+    },
+    "dependencies": {
         "xyzt": "^4.7.0"
     }
 }
