--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     },
     "devDependencies": {
         "@collboard/modules-sdk": "18.13.0",
-        "tslint": "^6.1.3"
+        "tslint": "^6.1.3",
+        "xyzt": "^4.7.0"
     },
     "dependencies": {
-        "xyzt": "^4.7.0"
     }
 }
