--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
         "postversion": "git push && git push --tags"
     },
     "devDependencies": {
-        "@collboard/modules-sdk": "18.13.0",
+        "@collboard/modules-sdk": "18.13.100",
         "tslint": "^6.1.3",
         "xyzt": "^4.7.0"
     },
-    "dependencies": {
-    }
+    "dependencies": {}
 }
