--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "preversion": "npm run lint && npm test",
         "postversion": "git push && git push --tags"
     },
-    "devDependencies": {
+    "devDependencies": {aaa
         "@collboard/modules-sdk": "26.0.505",
         "tslint": "6.1.3",
         "xyzt": "4.7.0"
