--- a/package.json
+++ b/package.json
@@ -1,28 +1,1 @@
-{
-    "name": "@collboard-templates/sample-art-tool-attribute-module",
-    "version": "0.3.145",
-    "description": "Simple sample module for Collboard.com with the art (object on the board), tool, and attribute",
-    "license": "SEE LICENSE IN LICENSE",
-    "contributors": [
-        "Pavol Hejný <pavol.hejny@collboard.com> (https://collboard.com/-/about/team)",
-        "Jonáš Rosecký <jonas.rosecky@collboard.com> (https://collboard.com/-/about/team)"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/collboard/sample-art-tool-attribute-module"
-    },
-    "private": false,
-    "scripts": {
-        "start": "colldev develop",
-        "test": "colldev test",
-        "lint": "tslint -p tsconfig.json",
-        "preversion": "npm run lint && npm test",
-        "postversion": "git push && git push --tags"
-    },
-    "devDependencies": {
-        "@collboard/modules-sdk": "34.3.0",
-        "tslint": "6.1.3",
-        "xyzt": "4.7.0"
-    },
-    "dependencies": {}
-}
+undefined
