--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "devDependencies": {
         "@collboard/modules-sdk": "35.11.500",
         "tslint": "6.1.3",
-        "xyzt": "4.7.0"
-    },
-    "dependencies": {}
+        "xyzt": "^5.4.0"
+    }
 }
