--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "devDependencies": {
         "@collboard/modules-sdk": "35.13.1800",
         "tslint": "6.1.3",
-        "xyzt": "5.4.2"
+        "xyzt": "^5.4.3"
     }
 }
