--- a/package.json
+++ b/package.json
@@ -23,5 +23,15 @@
         "@collboard/modules-sdk": "35.13.1800",
         "tslint": "6.1.3",
         "xyzt": "5.4.3"
-    }
+    },
+    "funding": [
+        {
+            "type": "individual",
+            "url": "https://buymeacoffee.com/hejny"
+        },
+        {
+            "type": "github",
+            "url": "https://github.com/collboard/sample-art-tool-attribute-module/blob/main/README.md#%EF%B8%8F-contributing"
+        }
+    ]
 }
